feat. jdk1.8 에서 동작하도록 수정